--- a/src/components/ui/modal/modal.module.scss
+++ b/src/components/ui/modal/modal.module.scss
@@ -5,6 +5,8 @@
   transform: translate(-50%, -50%);
 
   background-color: var(--color-dark-700);
+  border: 1px solid var(--color-dark-500);
+  border-radius: 2px;
 
   &.sm {
     width: 367px;
@@ -28,6 +30,13 @@
   }
 }
 
+.overlay {
+  position: fixed;
+  z-index: 0;
+  inset: 0;
+  background-color: rgb(0 0 0 / 50%);
+}
+
 .header {
   display: flex;
   align-items: center;
@@ -46,10 +55,14 @@
 }
 
 .contentBox {
+  z-index: 1;
+
   display: flex;
   flex-direction: column;
+  gap: 30px;
   align-items: center;
-  padding: 20px;
+
+  padding: 18px 24px;
 }
 
 .closeButton {
